| Summary: | ASTERISK-27257: bridge_native_rtp: half-way direct media when using early bridging | ||
| Reporter: | Jean Aunis - Prescom (PrescomJA) | Labels: | |
| Date Opened: | 2017-09-06 10:57:49 | Date Closed: | 2017-09-21 10:37:45 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Bridges/bridge_native_rtp |
| Versions: | 14.4.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) extensions.conf ( 1) sip.conf ( 2) test-ari.js | |
| Description: | When early bridging two SIP channels using ARI, SIP endpoint 1 does not receive endpoint 2's RTP port, but instead Asterisk's RTP port. Endpoint 2 properly receives endpoint 1's RTP port.
This leads to half-way direct media : endpoint 2 sends its RTP stream directly to endpoint 1, but endpoint 1 sends its RTP stream to Asterisk which relays it to endpoint 2. To reproduce the problem, please find attached a piece of NodeJS code (for the ARI part), sip.conf and extensions.conf. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2017-09-06 10:57:49.887-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Jean Aunis - Prescom (PrescomJA) 2017-09-06 10:59:55.827-0500 Config files and ARI code attachment. By: Friendly Automation (friendly-automation) 2017-09-21 10:37:46.639-0500 Change 6495 merged by Jenkins2: bridge : Fix one-way direct-media when early bridging with native_rtp [https://gerrit.asterisk.org/6495|https://gerrit.asterisk.org/6495] By: Friendly Automation (friendly-automation) 2017-09-21 10:44:24.527-0500 Change 6462 merged by Jenkins2: bridge : Fix one-way direct-media when early bridging with native_rtp [https://gerrit.asterisk.org/6462|https://gerrit.asterisk.org/6462] By: Friendly Automation (friendly-automation) 2017-09-21 10:47:17.344-0500 Change 6496 merged by Jenkins2: bridge : Fix one-way direct-media when early bridging with native_rtp [https://gerrit.asterisk.org/6496|https://gerrit.asterisk.org/6496] By: Friendly Automation (friendly-automation) 2017-09-21 11:00:10.191-0500 Change 6497 merged by Joshua Colp: bridge : Fix one-way direct-media when early bridging with native_rtp [https://gerrit.asterisk.org/6497|https://gerrit.asterisk.org/6497] | ||